--- a/bbs-web/etc/dev.yaml
+++ b/bbs-web/etc/dev.yaml
@@ -1,3 +1,14 @@
 
-service_name: bbs_spider
-service_version: v0.0.1
+service_name: "bbs_spider"
+service_port: ":8002"
+service_version: "v0.0.1"
+prometheus_port: ":8001"
+
+database:
+  dsn: "root:123456@tcp(127.0.0.1:3306)/sj_cms_new?charset=utf8mb4&parseTime=True&loc=Local"
+  max_idle_conn: 10  # 最大空闲连接数
+  max_open_conn: 10  # 最大连接数
+
+redis:
+  dsn: ""
+
