--- a/bbs-web/etc/dev.yaml
+++ b/bbs-web/etc/dev.yaml
@@ -1,5 +1,7 @@
 
 service_name: "bbs_spider"
+service_env: "dev"
+service_id: 1
 service_port: ":8002"
 service_version: "v0.0.1"
 prometheus_port: ":8001"
@@ -12,3 +14,5 @@ database:
 redis:
   dsn: ""
 
+otel:
+  url: "http://192.168.1.52:14268/api/traces"
