--- a/bbs-web/Makefile
+++ b/bbs-web/Makefile
@@ -1,3 +1,4 @@
 .PHONY: mock
 mock:
 	@mockgen -source=E:\workspace\github.com\bbs-spider\bbs-web\internal\service\articleService.go -package=svcmocks -destination=E:\workspace\github.com\bbs-spider\bbs-web\internal\service\svcmocks\articleService.mock.go
+	@mockgen -source=E:\workspace\github.com\bbs-spider\bbs-web\internal\repository\article\articleRepo.go -package=svcmocks -destination=E:\workspace\github.com\bbs-spider\bbs-web\internal\repository\article\svcmocks\articleRepo.mock.go
