--- a/bbs-web/Makefile
+++ b/bbs-web/Makefile
@@ -2,3 +2,5 @@
 mock:
 	@mockgen -source=E:\workspace\github.com\bbs-spider\bbs-web\internal\service\articleService.go -package=svcmocks -destination=E:\workspace\github.com\bbs-spider\bbs-web\internal\service\svcmocks\articleService.mock.go
 	@mockgen -source=E:\workspace\github.com\bbs-spider\bbs-web\internal\repository\article\articleRepo.go -package=svcmocks -destination=E:\workspace\github.com\bbs-spider\bbs-web\internal\repository\article\svcmocks\articleRepo.mock.go
+	@mockgen -source=E:\workspace\github.com\bbs-spider\bbs-web\internal\repository\article\articleWrite.go -package=svcmocks -destination=E:\workspace\github.com\bbs-spider\bbs-web\internal\repository\article\svcmocks\articleWrite.mock.go
+	@mockgen -source=E:\workspace\github.com\bbs-spider\bbs-web\internal\repository\article\articleRead.go -package=svcmocks -destination=E:\workspace\github.com\bbs-spider\bbs-web\internal\repository\article\svcmocks\articleRead.mock.go
