--- a/bbs-web/docker-compose.yaml
+++ b/bbs-web/docker-compose.yaml
@@ -92,15 +92,15 @@ services:
 #      - i18n.locale=zh-CN
 #    ports:
 #      - "5601:5601"
-
-#  mongo-express:
-#    image: mongo-express:0.54
-#    restart: always
-#    ports:
-##      - 访问 18081
-#      - 18081:8081
-#    environment:
-#      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-#      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-##      这个url就是根据 mongo 里面的配置搞出来的
-#      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+  # 用于MongoDB可视化的一个东西，选装
+  mongo-express:
+    image: mongo-express:0.54
+    restart: always
+    ports:
+#      - 访问 18081
+      - 18081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+#      这个url就是根据 mongo 里面的配置搞出来的
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
