--- a/bbs-web/etc/dev.yaml
+++ b/bbs-web/etc/dev.yaml
@@ -13,7 +13,10 @@ database:
   max_open_conn: 10  # 最大连接数
 
 redis:
-  dsn: ""
+  dsn: "192.168.1.52:6379"
+
+mongodb:
+  dsn: "mongodb://root:example@localhost:27017"
 
 otel:
   url: "http://192.168.1.52:14268/api/traces"
