--- a/bbs-site/package.json
+++ b/bbs-site/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "element-ui": "^2.15.14",
+    "marked": "^12.0.1",
     "mavon-editor": "^2.10.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
@@ -42,7 +43,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "shelljs": "^0.8.5",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
