--- a/bbs-web/etc/dev.yaml
+++ b/bbs-web/etc/dev.yaml
@@ -13,7 +13,7 @@ database:
   max_open_conn: 10  # 最大连接数
 
 redis:
-  dsn: "192.168.1.52:6379"
+  dsn: "192.168.1.52:6379"a
 
 mongodb:
   dsn: "mongodb://root:example@localhost:27017"
