--- a/bbs-web/etc/dev.yaml
+++ b/bbs-web/etc/dev.yaml
@@ -1,4 +1,3 @@
-
 service_name: "bbs_spider_1"
 service_env: "dev"
 service_id: 1
@@ -13,7 +12,7 @@ database:
   max_open_conn: 10  # 最大连接数
 
 redis:
-  dsn: "192.168.1.52:6379"a
+  dsn: "192.168.1.52:6379"
 
 mongodb:
   dsn: "mongodb://root:example@localhost:27017"
