--- a/bbs-web/docker-compose.yaml
+++ b/bbs-web/docker-compose.yaml
@@ -14,12 +14,12 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '6399:6379'
-#  etcd:
-#    image: 'bitnami/etcd:3.5.9'
-#    environment:
-#      - ALLOW_NONE_AUTHENTICATION=yes
-#    ports:
-#      - 12379:2379
+  etcd:
+    image: 'bitnami/etcd:3.5.9'
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+    ports:
+      - 12379:2379
 #  mongo:
 #    image: mongo:6.0
 #    restart: always
