--- a/bbs-go-zero/mall/docker-compose.yaml
+++ b/bbs-go-zero/mall/docker-compose.yaml
@@ -29,3 +29,14 @@ services:
       - ALLOW_NONE_AUTHENTICATION=yes
     ports:
       - "12379:2379"
+
+  prometheus:
+    image: prom/prometheus:v2.47.2
+    volumes:
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yaml
+    ports:
+      - 9090:9090
+    command:
+      # 开启remote writer
+      - "--web.enable-remote-write-receiver"
+      - "--config.file=/etc/prometheus/prometheus.yaml"
