--- a/bbs-go-zero/mall/service/user/api/etc/user.yaml
+++ b/bbs-go-zero/mall/service/user/api/etc/user.yaml
@@ -18,3 +18,14 @@ UserRpc:
     Hosts:
       - 127.0.0.1:12379
     Key: user.rpc
+
+Prometheus:
+  Host: 0.0.0.0
+  Port: 9080
+  Path: /metrics
+
+Telemetry:
+  Name: user.api
+  Endpoint: http://192.168.1.52:14268/api/traces
+  Sampler: 1.0
+  Batcher: jaeger
