--- a/enterprise360/docker-compose.yaml
+++ b/enterprise360/docker-compose.yaml
@@ -1,4 +1,33 @@
 services:
+  mysql8:
+    image: mysql:8.0.29
+    restart: always
+    command:
+      #      - 加入参数，设置 binlog 和主节点
+      - --default_authentication_plugin=mysql_native_password
+      - --binlog-format=ROW
+      - --server-id=1
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      #      - 外部访问用 13316
+      - 13316:3306
+
+  redis:
+    image: "bitnami/redis:latest"
+    restart: always
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - '6379:6379'
+
+  etcd:
+    image: "bitnami/etcd:latest"
+    restart: always
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+    ports:
+      - "12379:2379"
   #jaeger链路追踪 — Jaeger for tracing
   jaeger:
     image: jaegertracing/all-in-one:1.42.0
@@ -14,10 +43,8 @@ services:
       - "9411:9411"
     environment:
       - SPAN_STORAGE_TYPE=elasticsearch
-      - ES_SERVER_URLS=http://elasticsearch:9200
+      - ES_SERVER_URLS=http://127.0.0.1:9200
       - LOG_LEVEL=debug
-    networks:
-      - looklook_net
 
   #搜集kafka业务日志、存储prometheus监控数据 - Kafka for collecting business logs and storing Prometheus monitoring data
   elasticsearch:
@@ -34,5 +61,3 @@ services:
     ports:
       - 9200:9200
       - 9300:9300
-    networks:
-      - looklook_net
