--- a/enterprise360/service/user/rpc/etc/user.yaml
+++ b/enterprise360/service/user/rpc/etc/user.yaml
@@ -1,6 +1,14 @@
 Name: user.rpc
-ListenOn: 0.0.0.0:8080
+ListenOn: 0.0.0.0:19001
 Etcd:
   Hosts:
   - 127.0.0.1:2379
   Key: user.rpc
+
+Mysql:
+  DataSource: root:root@tcp(127.0.0.1:13316)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+
+CacheRedis:
+  - Host: 127.0.0.1:6379
+    Type: node
+    Pass:
