--- a/enterprise360/service/user/rpc/etc/user.yaml
+++ b/enterprise360/service/user/rpc/etc/user.yaml
@@ -2,11 +2,11 @@ Name: user.rpc
 ListenOn: 0.0.0.0:19001
 Etcd:
   Hosts:
-  - 127.0.0.1:2379
+  - 127.0.0.1:12379
   Key: user.rpc
 
 Mysql:
-  DataSource: root:root@tcp(127.0.0.1:13316)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+  DataSource: root:root@tcp(127.0.0.1:13316)/company_info?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 
 CacheRedis:
   - Host: 127.0.0.1:6379
